@@ -561,7 +561,8 @@ layer.
       <td>no
 </table>
 
-<p class=issue>The support for 'mask-attachment' may be removed for SVG.
+<p class=issue>The relevance of this feature needs to be prooved.
+The support for 'mask-attachment' may be removed for SVG.
 
 <p>If mask images are specified, this property specifies whether
 they are fixed with regard to the <em class="index">viewport</em>
@@ -854,6 +855,8 @@ layer.
       <td>no
 </table>
 
+<p class=issue>The relevance of this feature needs to be prooved.</p>
+
 <p>Determines the <dfn id="mask-painting-area">mask painting area</dfn>,
 which determines the area that is affected by the mask.
 The syntax of the property is given with
@@ -915,6 +918,8 @@ layer.
       <th>Animatable:
       <td>no
 </table>
+
+<p class=issue>The relevance of this feature needs to be prooved.</p>
 
 <p>For elements rendered as a single box, specifies the
 <dfn id="mask-positioning-area">mask positioning area</dfn>.
@@ -1622,8 +1627,8 @@ area</i>.
 
 <div class=example>
 <div class=figure>
-  <p><img src="images/slice.png" alt="Diagram: two horizontal cuts and two
-  vertical cuts through an image">
+  <p><img src="images/slice.svg" alt="Diagram: two horizontal cuts and two
+  vertical cuts through an image" width="365">
 
   <p class=caption>Diagram illustrating the cuts corresponding to the
   value ''25% 30% 12% 20%''
