@@ -31,14 +31,14 @@
 
    <h1>CSS Masking</h1>
 
-   <h2 class="no-num no-toc" id=longstatus-date>Editor's Draft 15 August 2012</h2>
+   <h2 class="no-num no-toc" id=longstatus-date>Editor's Draft 16 August 2012</h2>
 
    <dl>
     <dt>This version:
 
     <dd><a
      href="http://dvcs.w3.org/hg/FXTF/raw-file/tip/masking/index.html">http://dvcs.w3.org/hg/FXTF/raw-file/tip/masking/index.html</a>
-     <!--http://www.w3.org/TR/2012/WD-css-masking-20120815/-->
+     <!--http://www.w3.org/TR/2012/WD-css-masking-20120816/-->
 
     <dt>Latest version:
 
@@ -879,7 +879,8 @@ body {
      <td>no
   </table>
 
-  <p class=issue>The support for ‘<a href="#mask-attachment"><code
+  <p class=issue>The relevance of this feature needs to be prooved. The
+   support for ‘<a href="#mask-attachment"><code
    class=property>mask-attachment</code></a>’ may be removed for SVG.
 
   <p>If mask images are specified, this property specifies whether they are
@@ -1257,6 +1258,8 @@ body {
      <td>no
   </table>
 
+  <p class=issue>The relevance of this feature needs to be prooved.
+
   <p>Determines the <dfn id=mask-painting-area>mask painting area</dfn>,
    which determines the area that is affected by the mask. The syntax of the
    property is given with
@@ -1349,6 +1352,8 @@ body {
 
      <td>no
   </table>
+
+  <p class=issue>The relevance of this feature needs to be prooved.
 
   <p>For elements rendered as a single box, specifies the <dfn
    id=mask-positioning-area>mask positioning area</dfn>. For elements
@@ -2627,7 +2632,7 @@ div {
    <div class=figure>
     <p><img
      alt="Diagram: two horizontal cuts and two   vertical cuts through an image"
-     src="images/slice.png">
+     src="images/slice.svg" width=365>
 
     <p class=caption>Diagram illustrating the cuts corresponding to the value
      ‘<code class=css>25% 30% 12% 20%</code>’
@@ -3463,7 +3468,7 @@ div {
      user coordinate system for the element referencing the <a
      class=element-name href="#ClipPathElement">‘<code
      class=property>clipPath</code>’</a> element via the <a class=property
-     href="HASH(0x7fc119048178)">‘<code
+     href="HASH(0x7f964a048178)">‘<code
      class=property>clip-path</code>’</a> property).<br>
      If <span class=attr-value>clipPathUnits="objectBoundingBox"</span>, then
      the user coordinate system for the contents of the <a class=element-name
@@ -3491,9 +3496,9 @@ div {
   <p><a class=element-name href="#ClipPathElement">‘<code
    class=property>clipPath</code>’</a> elements are never rendered
    directly; their only usage is as something that can be referenced using
-   the <a class=property href="HASH(0x7fc119048178)">‘<code
+   the <a class=property href="HASH(0x7f964a048178)">‘<code
    class=property>clip-path</code>’</a> property. The <a class=property
-   href="HASH(0x7fc119047e30)">‘<code class=property>display</code>’</a>
+   href="HASH(0x7f964a047e30)">‘<code class=property>display</code>’</a>
    property does not apply to the <a class=element-name
    href="#ClipPathElement">‘<code class=property>clipPath</code>’</a>
    element; thus, <a class=element-name href="#ClipPathElement">‘<code
@@ -3503,7 +3508,7 @@ div {
    class=element-name href="#ClipPathElement">‘<code
    class=property>clipPath</code>’</a> elements are available for
    referencing even when the <a class=property
-   href="HASH(0x7fc119047e30)">‘<code class=property>display</code>’</a>
+   href="HASH(0x7f964a047e30)">‘<code class=property>display</code>’</a>
    property on the <a class=element-name href="#ClipPathElement">‘<code
    class=property>clipPath</code>’</a> element or any of its ancestors is
    set to <a class=prop-value href="#none">none</a>.
