@@ -1,3 +1,7 @@
+2012-08-15 dschulze@adobe.com
+	Added issues that feature need to be proofed for 'mask-attachment', 'mask-origin' and 'mask-clip'
+	Replaced more PNG images with SVG
+
 2012-08-14 dschulze@adobe.com
 	Added example for 'mask-box-image'
 
